@@ -5,22 +5,23 @@
 #
 # for local ndk-bundle, download ndk and set ANDROID_NDK_HOME and ANDROID_NDK to ndk-bundle directory
 
-image: openjdk:8-jdk
+image: openjdk:11-jdk
 
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
-  ANDROID_SDK_TARGET: "25"
-  ANDROID_BUILD_TOOLS: "27.0.3"
-  ANDROID_SDK_TOOLS: "4333796"
-  GRADLE_VERSION: "4.4.1"
+  CMD_LINE_TOOLS_URL: "https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip"
+  SDK_MANAGER: sdk-tools-linux/cmdline-tools/latest/bin/sdkmanager
 
 before_script:
   - apt-get -qq update --yes
-  - apt-get -qq install --yes wget tar unzip lib32stdc++6 lib32z1 build-essential
-  - wget --quiet https://dl.google.com/android/repository/sdk-tools-linux-${ANDROID_SDK_TOOLS}.zip
-  - unzip -qq sdk-tools-linux-${ANDROID_SDK_TOOLS}.zip -d sdk-tools-linux
-  - $(yes | sdk-tools-linux/tools/bin/sdkmanager --licenses > /dev/null) || true
-  - sdk-tools-linux/tools/bin/sdkmanager --install ndk-bundle > /dev/null
+  - apt-get -qq install --yes wget tar unzip lib32stdc++6 lib32z1 build-essential file
+  - wget --quiet ${CMD_LINE_TOOLS_URL} -O tools.zip
+  - unzip -qq tools.zip -d sdk-tools-linux
+  - mkdir sdk-tools-linux/cmdline-tools/latest
+  - mv sdk-tools-linux/cmdline-tools/* sdk-tools-linux/cmdline-tools/latest/  || true
+  - yes | ${SDK_MANAGER} --licenses > /dev/null || true
+  - ${SDK_MANAGER} --install ndk-bundle > /dev/null
+  - yes | ${SDK_MANAGER} --licenses  > /dev/null || true
   - export ANDROID_HOME=$PWD/sdk-tools-linux
   - export PATH=$PATH:$PWD/sdk-tools-linux/platform-tools/
   - chmod +x ./gradlew
