@@ -1,13 +1,17 @@
 v0.7 (PENDING)
 -----
-- Add androidx.constraintlayout
+- Add androidx.constraintlayout dependency
 - Fix gradle build for android studio 2021 (update to gradle-7.2)
+- Fix gitlab runner to work with gradle 7
 - Fix crashing behavior due to missing startForeground() in onCreate of service
 - Reduce lag when viewing large log files with recycleview
 - Add feature to scroll to bottom of log file
 - Add feature to only sync when connected to charger
 - Fix bug trying to cast string to boolean when persisting shared preferences
-- fix fingerprint issue with dropbear which prevented fingerprint check to proceed
+- Fix fingerprint issue with dropbear which prevented fingerprint check to proceed
+- Include rsync command in log file
+- Open activity if notification is pressed
+- Properly add permission to manifest which was used but not requested: get_accounts
 
 v0.6
 ----
